--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node $NODE_DEBUG_OPTION index.js"
+    "test": "node $NODE_DEBUG_OPTION v2_iliadConsumiBot.js"
   },
   "author": "Francesco Longo",
   "license": "ISC",
