--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node $NODE_DEBUG_OPTION v2_iliadConsumiBot.js"
+    "start:debug": "node $NODE_DEBUG_OPTION index.js"
   },
   "author": "Francesco Longo",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "dotenv": "^8.2.0",
-    "form-data": "^2.3.2",
-    "request": "^2.87.0",
-    "restify-clients": "^2.2.0",
-    "simple-node-logger": "^0.93.37",
-    "telebot": "^1.2.6",
-    "telegraf": "^3.38.0"
+    "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.0",
+    "form-data": "^4.0.0",
+    "request": "^2.88.2",
+    "restify-clients": "^3.1.0",
+    "simple-node-logger": "^21.8.12",
+    "telebot": "^1.4.1",
+    "telegraf": "^4.7.0"
   }
 }
